@@ -117,7 +117,6 @@
 	/* Function Prototypes: */
 		void CDC_Task(void);
 		void SetupHardware(void);
-		void ResetHardware(void);
 
 		void EVENT_USB_Device_ConfigurationChanged(void);
 		void EVENT_USB_Device_UnhandledControlRequest(void);
